--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "description": "HTML tree methods for Kirby 3",
     "type": "kirby-plugin",
     "license": "MIT",
+    "version": "2.0.0",
     "authors": [
         {
             "name": "hana+nils · Büro für Gestaltung",
